--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <h1 class="title"><b>Proteoinformatics</b></h1>
 </div>
 <div class="subtitle-section">
-  <h5 class="subtitle"><b>Your resource for informatics within the proteome</b></h5>
+  <h5 class="subtitle"><b>Your informatics resource for the proteome</b></h5>
 </div>
 <mat-divider></mat-divider>
 <div class="page-center">
