--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 </div>
 <mat-divider></mat-divider>
 
-<mat-grid-list cols="3" rowHeight="800px">
+<mat-grid-list cols="3" rowHeight="700px">
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
@@ -94,6 +94,24 @@
       <mat-card-actions>
         <a mat-button type="button" href="https://copica.proteo.info/" target="_blank">Go to</a>
         <a mat-button type="button" href="https://github.com/noatgnu/copica" target="_blank">GitHub</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card class="tool-card">
+      <mat-card-header>
+        <mat-card-title>UniProt Web Parser</mat-card-title>
+        <mat-card-subtitle>A Python package for querying sequence data from the UniProt biosequence database through its REST API</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="assets/uniprotparser.png" alt="Logo of Copica" class="tool-card-image">
+      <mat-card-content>
+        <p class="card-content">
+          The package is simple and can either choose to query data as fasta or in tabulated text form with or without all isoforms. For a synchronous workflow, the tool use Python requests module while aiohttp is used in case of asynchronous integration.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button type="button" href="https://pypi.org/project/uniprotparser/" target="_blank">Pypi</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/uniprotparser" target="_blank">GitHub</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
