--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,22 +22,42 @@
   color: #65647C;
 }
 
-.page-center {
-  display: flex;
-  justify-content: center;
-  //align-items: stretch;
-  //height: 800px;
+.banner-image {
+  background-image: linear-gradient(rgba(244, 67, 54, 1), rgba(70, 70, 70, 0.5)), url("../assets/banner.png");
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
-.tool-card {
-  width: 300px;
-  align-self: center;
+.banner-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
-.tool-card-image {
-  max-height: 300px;
+.banner-main-text{
+  font-size: 60px;
 }
 
-.card-content {
-  text-align: justify;
+.page-body{
+  background: #303030;
+}
+
+.footer-section {
+  background: rgba(244, 67, 54, 1);
+}
+
+.footer-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 15px;
 }
