--- a/src/app/stuffs/stuffs.component.html
+++ b/src/app/stuffs/stuffs.component.html
@@ -1,6 +1,11 @@
 
 <div style="display: flex; justify-content: center;">
+
   <div style="width: 90%; margin: 20px">
+    <mat-toolbar-row>
+      <h1 style="color: white"><b>Available proteoinformatics tools</b></h1>
+    </mat-toolbar-row>
+
     <mat-grid-list cols="3" rowHeight="300px">
       <mat-grid-tile>
         <mat-card class="tool-card">
