--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -6,7 +6,7 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>
-          Education
+          <mat-icon>history_edu</mat-icon> Education
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
