--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100vh; width: 100% }
+html, body {
+  height: 100vh;
+  width: 100%;
+  min-width: 1200px;
+  min-height: 1280px;
+}
 body {
   margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
 }
