--- a/src/app/python-modules/python-modules.component.html
+++ b/src/app/python-modules/python-modules.component.html
@@ -15,6 +15,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
+        <a mat-button type="button" href="https://pypi.org/project/sequal/" target="_blank">Pypi</a>
         <a mat-button type="button" href="https://github.com/noatgnu/sequal" target="_blank">GitHub</a>
       </mat-card-actions>
     </mat-card>
