--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -6,18 +6,60 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>
-          <mat-icon>history_edu</mat-icon> Education
+          <mat-icon>history_edu</mat-icon> Education History
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <p>
-          Doctor of Philosophy. University of Queensland.
+          Doctor of Philosophy. <span style="color: #ff6a00">University of Queensland</span>.
         </p>
         <p>
-          Master of Molecular Biology. University of Queensland.
+          Master of Molecular Biology. <span style="color: #ff6a00">University of Queensland</span>.
         </p>
         <p>
-          Bachelor of Science in Biochemistry. The University of Montana.
+          Bachelor of Science in Biochemistry. <span style="color: #ff6a00">The University of Montana</span>.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card style="margin-top: 50px">
+      <mat-card-header>
+        <mat-card-title>
+          <mat-icon>work</mat-icon> Work History
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          Postdoctoral Research Assistant. <span style="color: #c2185b">Medical Research Council - Protein Phosphorylation and Ubiquitylation</span>. <span style="color: #ff6a00">University of Dundee</span>.
+        </p>
+        <p>
+          Casual Training Assistant. <span style="color: #c2185b">Research Computing Centre</span>. <span style="color: #ff6a00">University of Queensland</span>.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card style="margin-top: 50px">
+      <mat-card-header>
+        <mat-card-title>
+          <mat-icon>emoji_events</mat-icon> Awards
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          Steam Cell Hackathon Winner Award. <span style="color: #c2185b">Australian Institute for Bioengineering and Nanotechnology</span>. <span style="color: #ff6a00">University of Queensland</span>.
+        </p>
+        <p>
+          UQ Research Training Scholarship. <span style="color: #ff6a00">University of Queensland</span>.
+        </p>
+        <p>
+          Faculty of Science Dean's Commendation for Academic Excellence. <span style="color: #ff6a00">University of Queensland</span>.
+        </p>
+        <p>
+          UQ Summer Research Scholarship. <span style="color: #ff6a00">University of Queensland</span>
+        </p>
+        <p>
+          Diversity Council Achievement Award. <span style="color: #ff6a00">University of Montana</span>.
+        </p>
+        <p>
+          Cal Murphy Scholarship. <span style="color: #ff6a00">University of Montana</span>.
         </p>
       </mat-card-content>
     </mat-card>
