--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,7 +3,22 @@
     <mat-toolbar-row>
       <h1 style="color: white"><b>About me</b></h1>
     </mat-toolbar-row>
+
     <mat-card>
+      <mat-card-header>
+        <mat-card-title>Me</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          My work primarily focuses on development of bioinformatics tools and workflows for data processing and management of proteomics mass spectrometry data.
+          This would involve creation of Python packages and modules that handle adapting and manipulating input and output of various workflows and databases and aggregating the results as final output.
+          The input data could come from a number of search engine like Proteome Discoverer, Diann, Mascot, Maxquant, MSFragger...
+          Following data processing and analysis is visualization of the results in javascript-based web applications where the interactive graphics could be shared with anyone without the need for installation of extra tools or software.
+        </p>
+      </mat-card-content>
+    </mat-card>
+
+    <mat-card style="margin-top: 50px">
       <mat-card-header>
         <mat-card-title>
           <mat-icon>history_edu</mat-icon> Education History
