--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -78,5 +78,32 @@
         </p>
       </mat-card-content>
     </mat-card>
+    <mat-card style="margin-top: 50px">
+      <mat-card-header>
+        <mat-card-title>
+          <mat-icon>terminal</mat-icon> Skills
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <ul>
+          Biological Science:
+          <li>Molecular Biology</li>
+          <li>Glycoproteomics</li>
+          <li>Proteomics</li>
+        </ul>
+        <ul>
+          Programming:
+          <li>Python</li>
+          <li>TypeScript</li>
+          <li>R</li>
+          <li>Golang</li>
+        </ul>
+        <ul>
+          Devop:
+          <li>Docker</li>
+          <li>Kubernetes</li>
+        </ul>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
