--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
   <mat-grid-list cols="3" rowHeight="100px">
     <mat-grid-tile>
       <p  class="footer-text">
-        Created by <b>Toan Phung</b>.
+        Created by <a routerLink="about-me"><b>Toan Phung</b></a>.
       </p>
     </mat-grid-tile>
     <mat-grid-tile>
