--- a/src/app/python-modules/python-modules.component.html
+++ b/src/app/python-modules/python-modules.component.html
@@ -74,4 +74,22 @@
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card class="tool-card">
+      <mat-card-header>
+        <mat-card-title>codx</mat-card-title>
+        <mat-card-subtitle>A Python package for building fasta library of variation of exon combination of protein</mat-card-subtitle>
+        <img mat-card-sm-image src="assets/codx.png" alt="Logo of codx" class="tool-card-image">
+      </mat-card-header>
+      <mat-card-content>
+        <p class="card-content">
+          The package use gene ids or uniprot accession ids as input to retrieve refseqgene record from NCBI and then use the exon information to build a fasta library of all possible combination of exons with or without introns.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button type="button" href="https://pypi.org/project/codx/" target="_blank">Pypi</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/codx" target="_blank">GitHub</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
 </mat-grid-list>
