--- a/src/app/stuffs/stuffs.component.html
+++ b/src/app/stuffs/stuffs.component.html
@@ -6,7 +6,6 @@
     </mat-toolbar-row>
     <app-web-application></app-web-application>
     <app-python-modules></app-python-modules>
+    <app-node-modules></app-node-modules>
   </div>
-
-
 </div>
