--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="home/web-application" (click)="sidenav.toggle()">Web Applications</a>
       <a mat-list-item routerLink="home/python-modules" (click)="sidenav.toggle()">Python Packages</a>
+      <a mat-list-item routerLink="home/node-modules" (click)="sidenav.toggle()">Python Packages</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
