--- a/src/app/node-modules/node-modules.component.html
+++ b/src/app/node-modules/node-modules.component.html
@@ -12,7 +12,7 @@
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
-          Sequal can be used for reading and formatting protein sequences with and without modifications whether or not they are placed as suffix or prefix to the amino acid residue. With it there is also a minimal support for certain Mass Spectrometry related task within the package.
+          Similar to my uniprotparser python package, uniprotparserjs can be used to get UniProt data in tabulated text format from the using the REST API. The package can be used both in Node and Web browser environments.
         </p>
       </mat-card-content>
       <mat-card-actions>
