--- a/src/app/node-modules/node-modules.component.html
+++ b/src/app/node-modules/node-modules.component.html
@@ -17,6 +17,7 @@
       </mat-card-content>
       <mat-card-actions>
         <a mat-button type="button" href="https://www.npmjs.com/package/uniprotparserjs" target="_blank">npm</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/uniprotparserjs" target="_blank">GitHub</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
