--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
   <a type="button" routerLink="home" href="" mat-icon-button aria-label="Home">
     <mat-icon>home</mat-icon>
   </a>
-  <a type="button" routerLink="about-me" href="" mat-icon-button aria-label="Home">
+  <!--<a type="button" routerLink="about-me" href="" mat-icon-button aria-label="Home">
     <mat-icon>badge</mat-icon>
-  </a>
+  </a>-->
   <a type="button" href="mailto: toan.phung@proteo.info" mat-icon-button aria-label="Send contact email">
     <mat-icon>contact_mail</mat-icon>
   </a>
