--- a/src/app/node-modules/node-modules.component.html
+++ b/src/app/node-modules/node-modules.component.html
@@ -6,9 +6,11 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>uniprotparserjs</mat-card-title>
-        <mat-card-subtitle>A JS/TS package for retrieving data from the UniProt Rest API</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/uniprotparserjs.png" alt="Logo of Sequal" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>uniprotparserjs</mat-card-title>
+          <mat-card-subtitle>A JS/TS package for retrieving data from the UniProt Rest API</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/uniprotparserjs.png" alt="Logo of Sequal" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
