--- a/src/app/python-modules/python-modules.component.html
+++ b/src/app/python-modules/python-modules.component.html
@@ -5,9 +5,11 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>sequal</mat-card-title>
-        <mat-card-subtitle>A Python package for all your amino acid sequence parsing need</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/sequal.png" alt="Logo of Sequal" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>sequal</mat-card-title>
+          <mat-card-subtitle>A Python package for all your amino acid sequence parsing need</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/sequal.png" alt="Logo of Sequal" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
@@ -23,9 +25,11 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>UniProt Web Parser</mat-card-title>
-        <mat-card-subtitle>A Python package for querying sequence data from the UniProt biosequence database through its REST API</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/uniprotparser.png" alt="Logo of uniprotparser" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>UniProt Web Parser</mat-card-title>
+          <mat-card-subtitle>A Python package for querying sequence data from the UniProt biosequence database through its REST API</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/uniprotparser.png" alt="Logo of uniprotparser" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
@@ -41,9 +45,11 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>DiannPy</mat-card-title>
-        <mat-card-subtitle>A Python package for producing additional reports from Diann analysis</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/diannpy.png" alt="Logo of DiannPy" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>DiannPy</mat-card-title>
+          <mat-card-subtitle>A Python package for producing additional reports from Diann analysis</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/diannpy.png" alt="Logo of DiannPy" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
@@ -59,9 +65,11 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>Proteomic Ruler</mat-card-title>
-        <mat-card-subtitle>A Python package for calculating copy number of protein content in deep profiling proteomics experiment from mass spectrometry data</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/proteomicruler.png" alt="Logo of proteomic ruler" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>Proteomic Ruler</mat-card-title>
+          <mat-card-subtitle>A Python package for calculating copy number of protein content in deep profiling proteomics experiment from mass spectrometry data</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/proteomicruler.png" alt="Logo of proteomic ruler" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
@@ -77,9 +85,11 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>codx</mat-card-title>
-        <mat-card-subtitle>A Python package for building fasta library of variation of exon combination of protein</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/codx.png" alt="Logo of codx" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>codx</mat-card-title>
+          <mat-card-subtitle>A Python package for building fasta library of variation of exon combination of protein</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/codx.png" alt="Logo of codx" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
