--- a/src/app/web-application/web-application.component.html
+++ b/src/app/web-application/web-application.component.html
@@ -5,9 +5,10 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <img mat-card-sm-image src="assets/curtain-logo.png" alt="Logo of Curtain" class="tool-card-image">
-        <mat-card-title>Curtain</mat-card-title>
-        <mat-card-subtitle>Sharing your total proteomics data with only a click</mat-card-subtitle>
+        <mat-card-title-group>
+          <img mat-card-sm-image src="assets/curtain-logo.png" alt="Logo of Curtain" class="tool-card-image">
+          <mat-card-title>Curtain</mat-card-title>
+          <mat-card-subtitle>Sharing your total proteomics data with only a click</mat-card-subtitle></mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p>
@@ -23,11 +24,12 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>Curtain PTM</mat-card-title>
-        <mat-card-subtitle>Sharing your PTM proteomics data with only a click</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/curtainptm.png" alt="Logo of CurtainPTM" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>Curtain PTM</mat-card-title>
+          <mat-card-subtitle>Sharing your PTM proteomics data with only a click</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/curtainptm.png" alt="Logo of CurtainPTM" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
-
       <mat-card-content>
         <p>
           For visualization of differential analysis of PTM proteomics data. Similar to Curtain, however, with PTM, the tool also aggregate extra data from other PTM databases for comparison between yours and the current knowledge base.
@@ -42,26 +44,11 @@
   <mat-grid-tile>
     <mat-card class="tool-card">
       <mat-card-header>
-        <mat-card-title>Celsus</mat-card-title>
-        <mat-card-subtitle>Index all your differential analysis and provide a webui for easy access</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/logo.png" alt="Logo of Celsus" class="tool-card-image">
-      </mat-card-header>
-      <mat-card-content>
-        <p>
-          Have you ever wonder if a certain protein of interests have ever been found in your old data? Celsus can help you with centralizing your data analysis results and from there allows you to search for any of your data of interests across all documented datasets.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <a mat-button type="button" href="https://github.com/noatgnu/celsusdjango" target="_blank">GitHub</a>
-      </mat-card-actions>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card class="tool-card">
-      <mat-card-header>
-        <mat-card-title>Copica</mat-card-title>
-        <mat-card-subtitle>A static database of protein copy numbers from deep profiling proteomics data</mat-card-subtitle>
-        <img mat-card-sm-image src="assets/copica.png" alt="Logo of Copica" class="tool-card-image">
+        <mat-card-title-group>
+          <mat-card-title>Copica</mat-card-title>
+          <mat-card-subtitle>A static database of protein copy numbers from deep profiling proteomics data</mat-card-subtitle>
+          <img mat-card-sm-image src="assets/copica.png" alt="Logo of Copica" class="tool-card-image">
+        </mat-card-title-group>
       </mat-card-header>
       <mat-card-content>
         <p class="card-content">
