--- a/src/app/python-modules/python-modules.component.scss
+++ b/src/app/python-modules/python-modules.component.scss
@@ -4,8 +4,8 @@
   margin: 20px;
 }
 
-.tool-card-image {
-  border-radius: 25px;
+mat-card .tool-card-image {
+  border-radius: 20px !important;
 }
 
 .card-content {
