--- a/src/app/stuffs/stuffs.component.scss
+++ b/src/app/stuffs/stuffs.component.scss
@@ -4,9 +4,10 @@
   margin: 20px;
 }
 
-.tool-card-image {
-  border-radius: 25px;
+mat-card .tool-card-image {
+  border-radius: 20px !important;
 }
+
 
 .card-content {
   text-align: justify;
