--- a/src/app/web-application/web-application.component.html
+++ b/src/app/web-application/web-application.component.html
@@ -61,4 +61,48 @@
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card class="tool-card">
+      <mat-card-header>
+        <mat-card-title-group>
+          <mat-card-title>Cupcake</mat-card-title>
+          <mat-card-subtitle>An open source e-lab notebook, samples, metadata and proteomics job management web application</mat-card-subtitle>
+        </mat-card-title-group>
+      </mat-card-header>
+      <mat-card-content>
+        <p class="card-content">
+          Cupcake was originally developed as a e-lab notebook that includes various advanced function like timers, voice and video recorder, sample tracker and many more. Recently, it has been extended to management of proteomics job submission and metadata, specifically in SDRF format. It combined the typical proteomics MS job submission for MS experiment to a facility with an SDRF metadata builder ensuring that any job submitted to the facility would also have a compliant SDRF file.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button type="button" href="https://cupcake.proteo.info/" target="_blank">Go to demo</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/cupcake" target="_blank">GitHub Backend</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/cupcake-ng" target="_blank">GitHub Frontend</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card class="tool-card">
+      <mat-card-header>
+        <mat-card-title-group>
+          <mat-card-title>Cinder</mat-card-title>
+          <mat-card-subtitle>
+            A web application for indexing, collating and searching of proteomics downstream analysis results
+          </mat-card-subtitle>
+        </mat-card-title-group>
+      </mat-card-header>
+      <mat-card-content>
+        <p class="card-content">
+          Cinder is a web application that allow users to upload their proteomics analysis results and index them for searching. The application can be used in conjunction with other proteomics analysis tools like Curtain and CurtainPTM where it would automatically import data from submitted Curtain or CurtainPTM links as well as the volcano plot and all its settings.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button type="button" href="https://cinder.proteo.info/" target="_blank">Go to demo</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/cinderBackend" target="_blank">GitHub Backend</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/cinderFrontend" target="_blank">GitHub Frontend</a>
+
+      </mat-card-actions>
+
+    </mat-card>
+  </mat-grid-tile>
 </mat-grid-list>
