--- a/src/app/node-modules/node-modules.component.html
+++ b/src/app/node-modules/node-modules.component.html
@@ -23,4 +23,24 @@
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-card class="tool-card">
+      <mat-card-header>
+        <mat-card-title-group>
+          <mat-card-title>SequalJS</mat-card-title>
+          <mat-card-subtitle>A JS/TS package for parsing and writing ProForma peptide sequences</mat-card-subtitle>
+        </mat-card-title-group>
+      </mat-card-header>
+      <mat-card-content>
+        <p class="card-content">
+          Similar to my sequal python package, SequalJS can be used on any web-based and node.js resources for reading and writing ProForma compliant protein sequences.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <a mat-button type="button" href="https://www.npmjs.com/package/sequaljs" target="_blank">npm</a>
+        <a mat-button type="button" href="https://github.com/noatgnu/sequaljs" target="_blank">GitHub</a>
+        <a mat-button type="button" href="https://sequaljs.proteo.info" target="_blank">Preview & Doc</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
 </mat-grid-list>
