--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,17 @@ body {
   margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
   background: #303030;
 }
+
+.tool-card {
+  transition: transform 0.3s, box-shadow 0.3s;
+
+  &:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+  }
+}
+
+::ng-deep .tool-card-image {
+  border-radius: 8px !important;
+  overflow: hidden;
+}
