--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <mat-sidenav-container autosize>
 
-  <mat-sidenav #sidenav mode="side">
+  <mat-sidenav #sidenav mode="side" opened="false">
     <mat-nav-list>
       <a mat-list-item routerLink="home/web-application" (click)="sidenav.toggle()">Web Applications</a>
       <a mat-list-item routerLink="home/python-modules" (click)="sidenav.toggle()">Python Packages</a>
@@ -41,15 +41,22 @@
 <footer class="footer-section">
   <mat-grid-list cols="3" rowHeight="100px">
     <mat-grid-tile>
-      <p  class="footer-text">
-        Created by <a routerLink="about-me" style="color: white"><b>Toan Phung</b></a>.
+      <p class="footer-text">
+        Created by <a routerLink="about-me" style="color: white"><b>Toan Phung</b></a>
       </p>
     </mat-grid-tile>
     <mat-grid-tile>
-
+      <div class="footer-text">
+        <a href="https://github.com/noatgnu" target="_blank" mat-icon-button>
+          <mat-icon>code</mat-icon>
+        </a>
+        <a href="mailto: toan.phung@proteo.info" mat-icon-button>
+          <mat-icon>mail</mat-icon>
+        </a>
+      </div>
     </mat-grid-tile>
     <mat-grid-tile>
-
+      <p class="footer-text">© 2025 Toan Phung</p>
     </mat-grid-tile>
   </mat-grid-list>
 </footer>
